2006-03-16  Kristian Høgsberg  <krh@redhat.com>

	* configure.ac: Check for glproto when building GLX and make sure
	we have at least 1.4.6.

	* GL/glx/*.c: Drop glx_ansic.h wrapper and call xalloc, xrealloc,
	xfree and str-funcs directly.
	
	* GL/glx/glxcmds.c (GlxSetRenderTables): Really add this.

2006-03-16  Kristian Høgsberg  <krh@redhat.com>

	More patches from David Reveman:

	* GL/glx/glxscreens.c: Add GL_ARB_texture_non_power_of_two,
	GL_EXT_framebuffer_object and GL_NV_texture_env_combine4
	extensions.

	* GL/glx/glxcmds.c (__glXContextDestroy, DoMakeCurrent)
	(__glXdirectContextDestroy): Add __GLXcontext destructor and flush
	context cache there and on loseCurrent.

	* GL/mesa/X/xf86glx.c (__glXMesaContextDestroy): Chain back to new
	__GLXcontext destructor.
	(__glXMesaContextForceCurrent): Set render table on forceCurrent.
	(init_screen_visuals): Index pVis array correctly.
	(GlxGetMesaProvider): Add this.

	* GL/glx/glxcmds.c: 
	* GL/glx/g_disptab_EXT.h: 
	* GL/glx/g_disptab_EXT.c: Hook up FBO marshalling.

2006-03-16  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa.c: (exaGetPixmapSize), (exaDestroyPixmap), (exaLog2),
	(exaCreatePixmap):
	* exa/exa_migration.c: (exaCopyDirtyToSys), (exaCopyDirtyToFb),
	(exaPixmapSave), (exaMoveInPixmap), (exaMoveOutPixmap):
	* exa/exa_priv.h:
	Change EXA so that exaMoveOutPixmap() retains the framebuffer copy of
	the pixmap, and damage is tracked so that a later exaMoveInPixmap won't
	result in an upload if no upload is necessary.  This will likely improve
	the performance of the "Always" migration scheme significantly, and is
	a step in the path to more exact damage tracking between framebuffer and
	system memory.

2006-03-16  Daniel Stone  <daniel@freedesktop.org>

	* hw/xfree86/common/xf86PciInfo.h:
	* hw/xfree86/os-support/bus/zx1PCI.c:
	Add support for ZX2 PCI-E local bus adaptors.  (Alex Williamson, HP)

	* hw/xfree86/os-support/bus/zx1PCI.c:
	Use soft timeout register to avoid MCAs when probing for non-existent